--- a/BLAZAMGui/UI/Inputs/MudSelectList.razor
+++ b/BLAZAMGui/UI/Inputs/MudSelectList.razor
@@ -15,6 +15,9 @@
            HelperTextOnFocus=@HelperTextOnFocus
            Placeholder="@Placeholder"
            Class=@Class
+           OnClearButtonClick=@OnClearButtonClick
+           Adornment=@Adornment
+           AutoFocus=@AutoFocus
            Disabled=@Disabled
            Clearable=@Clearable
            ListClass=@(ListClass+"w-min")
