--- a/BLAZAMGui/UI/Settings/Templates/EditDirectoryTemplate.razor
+++ b/BLAZAMGui/UI/Settings/Templates/EditDirectoryTemplate.razor
@@ -13,6 +13,10 @@
                 HelperText="@(otherTemplates.IsNullOrEmpty()?"There are no other templates":null)"
                        Disabled=@(otherTemplates.IsNullOrEmpty())
                        Clearable=true
+                        
+                       OnClearButtonClick="@(()=>{
+ParentTemplateChanged(null);
+})"
                        Label="Parent Template"
                        Values="@otherTemplates"
                        Value="@DirectoryTemplate.ParentTemplate"
@@ -23,9 +27,9 @@
                       @bind-Value=DirectoryTemplate.Name />
 
             <MudAutocomplete CoerceValue=true
-                         CoerceText=true
+                         CoerceText=false
                          SearchFunc="SearchCategories"
-                         @bind-Value=DirectoryTemplate.Category
+                         @bind-Text=DirectoryTemplate.Category
                          Label="@AppLocalization["Template Category"]" />
 
 
@@ -105,17 +109,7 @@
 
             </Section>
             <Section Title="Fields">
-                <MudCard>
-                    Variables:
-                    <MudStack Row=true>
-                        All above in addition to
-                    </MudStack>
-
-                    <MudStack Row=true>
-                        <code>{username}</code>:Username<br />
-                    </MudStack>
-
-                </MudCard>
+               
 
                 <MudDrawerContainer Class="mud-height-full" Style="min-height:200px">
                     <MudDrawer @bind-Open="@open" Elevation="0" Variant="@DrawerVariant.Persistent">
@@ -163,8 +157,8 @@
                                      Hover=true>
 
                                 <ToolBarContent>
-                                    <MudText Typo="Typo.h6">Fields</MudText>
-                                    <MudSpacer />
+                                    @*<MudText Typo="Typo.h6">Fields</MudText>
+                                    <MudSpacer />*@
                                     <MudButton Variant="Variant.Filled" Color="Color.Secondary" OnClick="@(()=>{open=!open;})">Toggle Fields</MudButton>
 
                                 </ToolBarContent>
@@ -236,28 +230,29 @@
             </Section>
 
             <Section Title="Organizational Unit">
-                @{
-                    var ouTemplateSourceName = GetParentOfValue(DirectoryTemplate.EffectiveParentOU, template => template.ParentOU);
-                }
-                <TemplateOverride SourceTemplate="@ouTemplateSourceName">
-                    <OUTreeView Label=@(AppLocalization["OU"]+": "+ SelectedOU?.CanonicalName)
+                @if (SelectedOU!=null)
+                {
+                    var ouTemplateSource = GetParentOfValue(DirectoryTemplate.EffectiveParentOU, template => template.ParentOU);
+
+                    <TemplateOverride SourceTemplate="@ouTemplateSource">
+                        <OUTreeView Label=@(AppLocalization["OU"]+": "+ SelectedOU?.CanonicalName)
                             StartRootExpanded=false
                             @bind-SelectedOU=@SelectedOU
                             @bind-StartingSelectedOU=@SelectedOU />
-                    @if (!DirectoryTemplate.ParentOU.IsNullOrEmpty())
-                    {
-                        <MudIconButton DisableElevation=true
+                        @if (DirectoryTemplate.ParentTemplateId != null && !DirectoryTemplate.ParentOU.IsNullOrEmpty())
+                        {
+                            <MudIconButton DisableElevation=true
                                Class="d-inline-flex pa-0"
                                Style="vertical-align:top;"
                                Color="Color.Dark"
                                Icon="@Icons.Material.Filled.Undo"
                                OnClick=@(async()=>{DirectoryTemplate.ParentOU=null;}) />
-                    }
-                </TemplateOverride>
+                        }
+                    </TemplateOverride>
 
 
 
-
+                }
 
             </Section>
             <Section Title="Assigned Groups">
@@ -273,7 +268,7 @@
 
                 }
                 <MudStack Row=true>
-                    <ADAutoComplete Label="@AppLocalization["Groups"]"
+                    <ADAutoComplete SearchObjectType=ActiveDirectoryObjectType.Group Label="@AppLocalization["Groups"]"
                                 @bind-SelectedResult="@SelectedGroup" />
                     <MudFab Size="Size.Small" StartIcon=@Icons.Material.Filled.Add
                         Color="Color.Primary"
@@ -386,18 +381,20 @@
         var matching = await Context.DirectoryTemplates.Where(dt => dt.Id == DirectoryTemplate.Id).FirstOrDefaultAsync();
         if (matching != null)
             _template = matching;
-        if (!DirectoryTemplate.ParentOU.IsNullOrEmpty())
-            SelectedOU = (await Directory.OUs.FindOuByStringAsync(DirectoryTemplate.ParentOU)).FirstOrDefault();
-        //if (SelectedOU == null)
-        //{
-        //    SelectedOU = await Directory.OUs.GetApplicationRootOU();
-        //}
+        await LoadParentOU();
         fields = await Context.ActiveDirectoryFields.Cast<IActiveDirectoryField>().ToListAsync();
         fields.AddRange(await Context.CustomActiveDirectoryFields.Where(cf => cf.DeletedAt == null).Cast<IActiveDirectoryField>().ToListAsync());
         RefreshGroups();
         await InvokeAsync(StateHasChanged);
     }
-
+    private async Task LoadParentOU(){
+        if (!DirectoryTemplate.EffectiveParentOU.IsNullOrEmpty())
+            SelectedOU = (await Directory.OUs.FindOuByStringAsync(DirectoryTemplate.EffectiveParentOU)).FirstOrDefault();
+        if (SelectedOU == null)
+        {
+            SelectedOU = await Directory.OUs.GetApplicationRootOU();
+        }
+    }
     protected void ValueChanged(string? newValue, DirectoryTemplateFieldValue fieldValue)
     {
         var fieldToModify = GetFieldToEdit(fieldValue);
@@ -428,21 +425,31 @@
         fieldToModify.Required = newValue;
     }
 
-    protected void ParentTemplateChanged(DirectoryTemplate parent)
+    protected async Task ParentTemplateChanged(DirectoryTemplate? parent)
     {
-        var templateCursor = parent;
-        while (templateCursor.ParentTemplate != null)
-        {
-            templateCursor = templateCursor.ParentTemplate;
-            if (templateCursor.Equals(DirectoryTemplate))
+        if(parent!=null){
+            var templateCursor = parent;
+            while (templateCursor.ParentTemplate != null)
             {
-                SnackBarService.Warning("Circular inheritance detected!");
-                return;
+                templateCursor = templateCursor.ParentTemplate;
+                if (templateCursor.Equals(DirectoryTemplate))
+                {
+                    SnackBarService.Warning("Circular inheritance detected!");
+                    return;
+                }
+
             }
+            DirectoryTemplate.ParentTemplate = parent;
+            DirectoryTemplate.ParentTemplateId = parent.Id;
+        }
+        else
+        {
+            DirectoryTemplate.ParentTemplateId = null;
+            DirectoryTemplate.ParentTemplate = null;
 
         }
-        DirectoryTemplate.ParentTemplate = parent;
-        DirectoryTemplate.ParentTemplateId = parent.Id;
+        await LoadParentOU();
+
     }
 
     protected IADOrganizationalUnit SelectedOU;
@@ -526,12 +533,16 @@
 
     private DirectoryTemplate GetParentOfValue(string value, Func<DirectoryTemplate, string?> valueSelector)
     {
+
         var templateCursor = DirectoryTemplate;
+
         while (templateCursor.ParentTemplate != null)
         {
-            templateCursor = templateCursor.ParentTemplate;
-            if (valueSelector.Invoke(templateCursor) != null && valueSelector.Invoke(templateCursor).Equals(value))
+            var templateValue = valueSelector.Invoke(templateCursor);
+            if (templateValue != null && templateValue.Equals(value))
                 return templateCursor;
+            templateCursor = templateCursor.ParentTemplate;
+
         }
         return null;
     }
