Somehow, some modals are broken

--- a/BLAZAMGui/UI/Groups/AssignedGroup.razor
+++ b/BLAZAMGui/UI/Groups/AssignedGroup.razor
@@ -23,7 +23,7 @@
     {
         <MudCardHeader>
 
-                        <MudText Typo ="Typo.h1" Size="HeadingSize.Is5">
+                        <MudText Typo ="Typo.h5">
 
                             <MudButton OnClick="@(()=>collapse1Visible = !collapse1Visible)">
                                 @Group.GroupName
