--- a/BLAZAMGui/UI/Settings/ApplicationSettings.razor
+++ b/BLAZAMGui/UI/Settings/ApplicationSettings.razor
@@ -3,7 +3,7 @@
 
 
 <MudText Typo="Typo.h4">@AppLocalization["Application Settings"]</MudText>
-<EditForm @ref=@EditForm Context="editContext" OnValidSubmit="Save" Model="settings">
+<EditForm Context="editContext" OnValidSubmit="Save" Model="settings">
 
 
     <SettingsField Label="@AppLocalization["Application Name"]">
