--- a/BLAZAM/Pages/Install/Authentication.razor
+++ b/BLAZAM/Pages/Install/Authentication.razor
@@ -85,7 +85,7 @@
             if (settings.Id == 0)
                 Context.AuthenticationSettings.Add(settings);
 
-            settings.AdminPassword = EncryptionService.EncryptObject(settings.AdminPasswordConfirmed);
+            settings.AdminPassword = settings.AdminPasswordConfirmed.Encrypt();
             await Context.SaveChangesAsync();
             await StepCompleted.InvokeAsync();
 
