--- a/BLAZAMGui/UI/Settings/Templates/EditDirectoryTemplate.razor
+++ b/BLAZAMGui/UI/Settings/Templates/EditDirectoryTemplate.razor
@@ -10,10 +10,9 @@
         <MudStack>
 
             <MudSelectList T="DirectoryTemplate"
-                HelperText="@(otherTemplates.IsNullOrEmpty()?"There are no other templates":null)"
+                       HelperText="@(otherTemplates.IsNullOrEmpty()?"There are no other templates":null)"
                        Disabled=@(otherTemplates.IsNullOrEmpty())
                        Clearable=true
-                        
                        OnClearButtonClick="@(()=>{
 ParentTemplateChanged(null);
 })"
@@ -97,7 +96,6 @@ ParentTemplateChanged(null);
                     }
                     <TemplateOverride SourceTemplate="@usernameFromTemplate">
                         <MudTextField Label="Password"
-                                 
                                   @bind-Value=DirectoryTemplate.EffectivePasswordFormula />
                     </TemplateOverride>
 
@@ -109,7 +107,7 @@ ParentTemplateChanged(null);
 
             </Section>
             <Section Title="Fields">
-               
+
 
                 <MudDrawerContainer Class="mud-height-full" Style="min-height:200px">
                     <MudDrawer @bind-Open="@open" Elevation="0" Variant="@DrawerVariant.Persistent">
@@ -158,7 +156,7 @@ ParentTemplateChanged(null);
 
                                 <ToolBarContent>
                                     @*<MudText Typo="Typo.h6">Fields</MudText>
-                                    <MudSpacer />*@
+                                <MudSpacer />*@
                                     <MudButton Variant="Variant.Filled" Color="Color.Secondary" OnClick="@(()=>{open=!open;})">Toggle Fields</MudButton>
 
                                 </ToolBarContent>
@@ -230,14 +228,15 @@ ParentTemplateChanged(null);
             </Section>
 
             <Section Title="Organizational Unit">
-                @if (SelectedOU!=null)
+                @if (SelectedOU != null)
                 {
                     var ouTemplateSource = GetParentOfValue(DirectoryTemplate.EffectiveParentOU, template => template.ParentOU);
 
                     <TemplateOverride SourceTemplate="@ouTemplateSource">
                         <OUTreeView Label=@(AppLocalization["OU"]+": "+ SelectedOU?.CanonicalName)
                             StartRootExpanded=false
-                            @bind-SelectedOU=@SelectedOU
+                            SelectedOU=@SelectedOU
+                            SelectedOUChanged="@((ou)=>{SelectedOU=ou; if(DirectoryTemplate.EffectiveParentOU!=ou.DN)DirectoryTemplate.ParentOU = ou.DN;})"
                             @bind-StartingSelectedOU=@SelectedOU />
                         @if (DirectoryTemplate.ParentTemplateId != null && !DirectoryTemplate.ParentOU.IsNullOrEmpty())
                         {
@@ -246,7 +245,7 @@ ParentTemplateChanged(null);
                                Style="vertical-align:top;"
                                Color="Color.Dark"
                                Icon="@Icons.Material.Filled.Undo"
-                               OnClick=@(async()=>{DirectoryTemplate.ParentOU=null;}) />
+                               OnClick=@(async()=>{DirectoryTemplate.ParentOU=null;LoadData();}) />
                         }
                     </TemplateOverride>
 
@@ -299,7 +298,12 @@ ParentTemplateChanged(null);
 
     </EditForm>
 }
+
 @code {
+
+    [Parameter]
+    public SetHeader? Header { get; set; }
+
     protected string groupText;
     protected bool open;
     protected bool _usernamePopoverOpen;
@@ -362,6 +366,7 @@ ParentTemplateChanged(null);
 
     [Parameter]
     public EventCallback<DirectoryTemplate> DirectoryTemplateChanged { get; set; }
+
     protected async Task AssignGroup(IADGroup? group)
     {
         var existing = await Context.DirectoryTemplateGroups.Where(g => g.GroupSid == group.SID.ToSidString()).FirstOrDefaultAsync();
@@ -372,6 +377,7 @@ ParentTemplateChanged(null);
                 };
         DirectoryTemplate.AssignedGroupSids.Add(existing);
     }
+
     protected async Task LoadData()
     {
         if (Context == null)
@@ -387,7 +393,9 @@ ParentTemplateChanged(null);
         RefreshGroups();
         await InvokeAsync(StateHasChanged);
     }
-    private async Task LoadParentOU(){
+
+    private async Task LoadParentOU()
+    {
         if (!DirectoryTemplate.EffectiveParentOU.IsNullOrEmpty())
             SelectedOU = (await Directory.OUs.FindOuByStringAsync(DirectoryTemplate.EffectiveParentOU)).FirstOrDefault();
         if (SelectedOU == null)
@@ -395,6 +403,7 @@ ParentTemplateChanged(null);
             SelectedOU = await Directory.OUs.GetApplicationRootOU();
         }
     }
+
     protected void ValueChanged(string? newValue, DirectoryTemplateFieldValue fieldValue)
     {
         var fieldToModify = GetFieldToEdit(fieldValue);
@@ -408,8 +417,7 @@ ParentTemplateChanged(null);
             DirectoryTemplate.FieldValues.Add((DirectoryTemplateFieldValue)fieldValue.Clone());
         }
 
-        var fieldToModify = DirectoryTemplate.FieldValues.Where(fv => (fv.Field != null && fv.Field.Equals(fieldValue.Field))
-        || (fv.CustomField != null && fv.CustomField.Equals(fieldValue.CustomField))).FirstOrDefault();
+        var fieldToModify = DirectoryTemplate.FieldValues.Where(fv => (fv.Field != null && fv.Field.Equals(fieldValue.Field)) || (fv.CustomField != null && fv.CustomField.Equals(fieldValue.CustomField))).FirstOrDefault();
         return fieldToModify;
     }
 
@@ -427,7 +435,8 @@ ParentTemplateChanged(null);
 
     protected async Task ParentTemplateChanged(DirectoryTemplate? parent)
     {
-        if(parent!=null){
+        if (parent != null)
+        {
             var templateCursor = parent;
             while (templateCursor.ParentTemplate != null)
             {
@@ -437,8 +446,8 @@ ParentTemplateChanged(null);
                     SnackBarService.Warning("Circular inheritance detected!");
                     return;
                 }
-
             }
+
             DirectoryTemplate.ParentTemplate = parent;
             DirectoryTemplate.ParentTemplateId = parent.Id;
         }
@@ -446,10 +455,9 @@ ParentTemplateChanged(null);
         {
             DirectoryTemplate.ParentTemplateId = null;
             DirectoryTemplate.ParentTemplate = null;
-
         }
-        await LoadParentOU();
 
+        await LoadParentOU();
     }
 
     protected IADOrganizationalUnit SelectedOU;
@@ -488,14 +496,14 @@ ParentTemplateChanged(null);
         if (Context == null)
             throw new ApplicationException("Database not available");
         DirectoryTemplate.ParentOU = SelectedOU.DN;
-
-
         if (DirectoryTemplate.Id == 0)
         {
             try
             {
                 await Context.DirectoryTemplates.AddAsync(DirectoryTemplate);
                 var result = await Context.SaveChangesAsync();
+
+                Header?.OnRefreshRequested.Invoke();
                 if (result > 0)
                 {
                     SnackBarService.Success("", DirectoryTemplate.Name + " was added.");
@@ -530,20 +538,28 @@ ParentTemplateChanged(null);
             }
         }
     }
-
-    private DirectoryTemplate GetParentOfValue(string value, Func<DirectoryTemplate, string?> valueSelector)
+    /// <summary>
+    /// 
+    /// </summary>
+    /// <param name="value"></param>
+    /// <param name="valueSelector"></param>
+    /// <returns>Null if the value comes from the current
+    ///  template, otherwise the source template</returns>
+    private DirectoryTemplate? GetParentOfValue(string value, Func<DirectoryTemplate, string?> valueSelector)
     {
-
         var templateCursor = DirectoryTemplate;
-
+        var templateValue = valueSelector.Invoke(templateCursor);
+        if (templateValue != null && templateValue.Equals(value))
+            return null;
         while (templateCursor.ParentTemplate != null)
         {
-            var templateValue = valueSelector.Invoke(templateCursor);
-            if (templateValue != null && templateValue.Equals(value))
-                return templateCursor;
             templateCursor = templateCursor.ParentTemplate;
 
+            var templateCursorValue = valueSelector.Invoke(templateCursor);
+            if (templateCursorValue != null && templateCursorValue.Equals(value))
+                return templateCursor;
         }
+
         return null;
     }
 
@@ -554,4 +570,5 @@ ParentTemplateChanged(null);
         public string? Value { get; set; }
     }
 }
+
 
