Add assign member button to group page and fix ui updates

--- a/BLAZAMGui/UI/Groups/MemberOfList.razor
+++ b/BLAZAMGui/UI/Groups/MemberOfList.razor
@@ -48,7 +48,7 @@
     {
         <MudText>@AppLocalization["Not a member of any groups"]</MudText>
     }
-    @if (EditMode)
+    @if (Model.CanAssign)
     {
 
         <MudIconButton Color="Color.Primary" Icon="@Icons.Material.Filled.GroupAdd" OnClick="@(()=>{AssignToClicked.InvokeAsync();})" />
