Fix for only being able to apply an action to one object type per access level.

--- a/BLAZAMGui/UI/Settings/Permissions/EditAccessLevel.razor
+++ b/BLAZAMGui/UI/Settings/Permissions/EditAccessLevel.razor
@@ -90,7 +90,7 @@
                                 {
                                     if (action.IsActionAppropriateForObject(objectMap.ObjectType))
                                     {
-                                        if (!WorkingModel.ActionMap.Any(a => a.ObjectAction == action))
+                                        if (!WorkingModel.ActionMap.Any(a => a.ObjectType==objectMap.ObjectType && a.ObjectAction == action))
                                         {
 
 
