--- a/BLAZAMGui/UI/AppModal.razor
+++ b/BLAZAMGui/UI/AppModal.razor
@@ -7,7 +7,7 @@
     </TitleContent>
     <DialogContent>
         <CascadingValue Value="this">
-            <MudContainer Class="pa-4">
+            <MudContainer Class="py-4 px-0">
                     @ChildContent
             </MudContainer>
         </CascadingValue>
