--- a/BLAZAMGui/UI/Settings/ActiveDirectoryStatusPanel.razor
+++ b/BLAZAMGui/UI/Settings/ActiveDirectoryStatusPanel.razor
@@ -4,7 +4,14 @@
     <MudCardHeader>
         Active Directory Connection Status
     </MudCardHeader>
+    @if (showProgress)
+    {
+        <MudStack Row=true>
+            <MudProgressLinear Indeterminate=true />
 
+        </MudStack>
+    }
+   
         <MudStack Row=true>
                 Server Port Open
                 <StatusCheck Status="_portStatus" />
@@ -59,7 +66,7 @@
     </MudCard>
 
 @code {
-#nullable disable warnings
+    #nullable disable warnings
 
     [Parameter]
     public EventCallback DirectoryConnected { get; set; }
@@ -77,10 +84,19 @@
 
     }
 
+    public void ResetStatus()
+    {
+        Directory = DirectoryFactory.CreateActiveDirectoryContext();
+        Directory.ConnectAsync();
+        _portStatus = false;
+        _credStatus = false;
+        _encryptedStatus = false;
+        showProgress = true;
+        StateHasChanged();
+    }
 
 
-
-    private async void UpdateStatus(object? state)
+    public async void UpdateStatus(object? state)
     {
         await Task.Run(async () =>
         {
@@ -89,6 +105,7 @@
                 _monitoring = true;
                 while (_monitoring == true)
                 {
+                    
                     if (Directory.Status == DirectoryConnectionStatus.Connecting)
                     {
                         showProgress = true;
