--- a/BLAZAMGui/UI/Settings/DirectorySettings.razor
+++ b/BLAZAMGui/UI/Settings/DirectorySettings.razor
@@ -135,7 +135,7 @@
 </MudForm>
 @code {
 
-#nullable disable warnings
+    #nullable disable warnings
     ADSettings settings = new ADSettings();
     bool _insert;
 
@@ -163,7 +163,7 @@
     }
     protected override async void Save()
     {
-     
+
         if (!settings.Password.Equals(passwordInDb))
         {
             settings.Password = settings.Password.Encrypt();
@@ -176,7 +176,8 @@
         }
         await AuditLogger.System.SettingsChanged("Active Directory", settings.GetChanges(originalSettings));
         base.Save();
- 
+        SettingsSaved.InvokeAsync();
+
 
     }
 
